--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,11 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@material-tailwind/react": "^2.1.8",
         "eslint-config-airbnb-typescript": "^17.1.0",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.12.0",
         "react-router-dom": "^6.21.1",
         "sort-by": "^0.0.2"
     },
