--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,9 +12,12 @@
   "author": "Fadil-tao",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "nodemon": "^3.0.2"
   }
