--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,11 @@
     },
     "dependencies": {
         "@material-tailwind/react": "^2.1.8",
+        "axios": "^1.6.5",
         "eslint-config-airbnb-typescript": "^17.1.0",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
+        "notistack": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
